--- a/the-acadia-school-of-traditional-music-arts/css/style.css
+++ b/the-acadia-school-of-traditional-music-arts/css/style.css
@@ -51,6 +51,9 @@ Divi Children Engine version: 1.0.3
 /*------------------------------------------------*/
 /*-----------------[BASIC STYLES]-----------------*/
 /*------------------------------------------------*/
+.ats-orange-border {
+  border: 3px solid #edb059; }
+
 /*------------------------------------------------*/
 /*---------------[HEADER]---------------*/
 /*------------------------------------------------*/
