--- a/the-acadia-school-of-traditional-music-arts/css/style.css
+++ b/the-acadia-school-of-traditional-music-arts/css/style.css
@@ -54,6 +54,9 @@ Divi Children Engine version: 1.0.3
 .ats-orange-border {
   border: 3px solid #edb059; }
 
+.ats-full-width {
+  width: 100%; }
+
 /*------------------------------------------------*/
 /*---------------[HEADER]---------------*/
 /*------------------------------------------------*/
