--- a/the-acadia-school-of-traditional-music-arts/scss/style.scss
+++ b/the-acadia-school-of-traditional-music-arts/scss/style.scss
@@ -65,7 +65,9 @@ $ats_grey: #afb5b9; // bkg on support button;
 .ats-orange-border {
 	border: 3px solid $ats_orange;
 }
-
+.ats-full-width {
+	width: 100%;
+}
 
 /*------------------------------------------------*/
 /*---------------[HEADER]---------------*/
