change grey color of support button

--- a/the-acadia-school-of-traditional-music-arts/css/style.css
+++ b/the-acadia-school-of-traditional-music-arts/css/style.css
@@ -65,11 +65,11 @@ Divi Children Engine version: 1.0.3
   #top-header .container #et-info {
     padding-top: 14px; }
   #top-header .container #et-secondary-menu .ats-button a {
-    background-color: #afb5b9;
-    padding: 8px 10px;
+    background-color: #545454;
+    padding: 5px 10px;
     margin-top: 5px;
     margin-bottom: 3px;
-    box-shadow: 1px 1px 1px #777777;
+    box-shadow: 1px 1px 1px #5d5d5d;
     font-weight: bold; }
 
 #main-header #et_mobile_nav_menu .ats-button a {
