--- a/the-acadia-school-of-traditional-music-arts/scss/style.scss
+++ b/the-acadia-school-of-traditional-music-arts/scss/style.scss
@@ -20,6 +20,8 @@ $ats_dkorange: #9a5f0a; // used on support button in top bar header.
 $ats_grey: #afb5b9; //
 $ats_dkgrey: #545454; //  bkg on support button;
 
+@import "partials/gform"; // size changes
+
 /*------------------------------[FONT ICONS]-----------------------------*/
 /*--[Created by Divi Children, http://divi4u.com/divi-children-plugin/]--*/
 /*-----------------------------------------------------------------------*/
