--- a/the-acadia-school-of-traditional-music-arts/css/style.css
+++ b/the-acadia-school-of-traditional-music-arts/css/style.css
@@ -238,7 +238,21 @@ Divi Children Engine version: 1.0.3
   /*-------------------[Portfolio]------------------*/
   /*-------------------[Sliders]------------------*/
   /*-------------------[Menu]------------------*/ }
-/*-------------------[480px]------------------*/
 @media only screen and (max-width: 767px) {
-  /*-------------------[Menu]------------------*/ }
-/*-------------------[320px]------------------*/
+  /* header */
+  .et_header_style_left #logo {
+    max-width: 80%;
+    max-height: 100%; }
+
+  #et_top_search {
+    display: none; } }
+/*-------------------[480px]------------------*/
+@media only screen and (max-width: 479px) {
+  .ats-full-width-mobile {
+    width: 100%; }
+
+  .hide-mobile {
+    display: none; }
+
+  #footer-widgets {
+    padding-bottom: 0px; } }
